test/errors/unknownUseImport.compopts
--detailed-errors # unknownUseImport-detailed.good
--no-detailed-errors # unknownUseImport-brief.good
